--- a/hw3/multiclass_classification_multioutput_regression.ipynb
+++ b/hw3/multiclass_classification_multioutput_regression.ipynb
@@ -484,13 +484,13 @@
     }
    ],
    "source": [
-    "X = df.drop(\"Type\", axis = 1).values\n",
+    "X = df.drop(\"Type\", axis=1).values\n",
     "y = df[\"Type\"].values.reshape(-1, 1)\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
     "\n",
     "print(\"Shape of X_train: \", X_train.shape)\n",
     "print(\"Shape of X_test: \", X_test.shape)\n",
@@ -986,7 +986,7 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
     "\n",
-    "parameters = {\"var_smoothing\": np.logspace(0,-9, num=100)}\n",
+    "parameters = {\"var_smoothing\": np.logspace(0, -9, num=100)}\n",
     "classifier_nb = GridSearchCV(GaussianNB(), parameters, scoring=\"roc_auc\", cv=3)\n",
     "\n",
     "classifier_nb_ovo = OneVsOneClassifier(classifier_nb)\n",
@@ -1264,146 +1264,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 116,
    "id": "b979b85d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Модель</th>\n",
-       "      <th>Точность обучения OVO</th>\n",
-       "      <th>Точность обучения OVR</th>\n",
-       "      <th>Точность обучения Output Code</th>\n",
-       "      <th>Точность OVO</th>\n",
-       "      <th>Точность OVR</th>\n",
-       "      <th>Точность Output Code</th>\n",
-       "      <th>Время обучения OVO</th>\n",
-       "      <th>Время обучения OVR</th>\n",
-       "      <th>Время обучения Output Code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Logistic Regression</td>\n",
-       "      <td>0.70000</td>\n",
-       "      <td>0.67500</td>\n",
-       "      <td>0.63125</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.740741</td>\n",
-       "      <td>0.685185</td>\n",
-       "      <td>46.464141</td>\n",
-       "      <td>20.051154</td>\n",
-       "      <td>18.841479</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>KNN</td>\n",
-       "      <td>0.91875</td>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>0.777778</td>\n",
-       "      <td>0.740741</td>\n",
-       "      <td>0.740741</td>\n",
-       "      <td>26.314357</td>\n",
-       "      <td>9.901749</td>\n",
-       "      <td>15.091800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SVM</td>\n",
-       "      <td>0.73125</td>\n",
-       "      <td>0.68125</td>\n",
-       "      <td>0.65000</td>\n",
-       "      <td>0.740741</td>\n",
-       "      <td>0.648148</td>\n",
-       "      <td>0.629630</td>\n",
-       "      <td>9.426423</td>\n",
-       "      <td>116.215997</td>\n",
-       "      <td>153.165585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Naive Bayes</td>\n",
-       "      <td>0.55000</td>\n",
-       "      <td>0.56250</td>\n",
-       "      <td>0.44375</td>\n",
-       "      <td>0.555556</td>\n",
-       "      <td>0.555556</td>\n",
-       "      <td>0.481481</td>\n",
-       "      <td>13.841964</td>\n",
-       "      <td>8.855953</td>\n",
-       "      <td>12.621655</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>DTC</td>\n",
-       "      <td>0.85000</td>\n",
-       "      <td>0.83125</td>\n",
-       "      <td>0.88750</td>\n",
-       "      <td>0.722222</td>\n",
-       "      <td>0.703704</td>\n",
-       "      <td>0.648148</td>\n",
-       "      <td>109.277299</td>\n",
-       "      <td>34.330039</td>\n",
-       "      <td>48.059679</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Модель  Точность обучения OVO  Точность обучения OVR  \\\n",
-       "0  Logistic Regression                0.70000                0.67500   \n",
-       "1                  KNN                0.91875                1.00000   \n",
-       "2                  SVM                0.73125                0.68125   \n",
-       "3          Naive Bayes                0.55000                0.56250   \n",
-       "4                  DTC                0.85000                0.83125   \n",
-       "\n",
-       "   Точность обучения Output Code  Точность OVO  Точность OVR  \\\n",
-       "0                        0.63125      0.666667      0.740741   \n",
-       "1                        1.00000      0.777778      0.740741   \n",
-       "2                        0.65000      0.740741      0.648148   \n",
-       "3                        0.44375      0.555556      0.555556   \n",
-       "4                        0.88750      0.722222      0.703704   \n",
-       "\n",
-       "   Точность Output Code  Время обучения OVO  Время обучения OVR  \\\n",
-       "0              0.685185           46.464141           20.051154   \n",
-       "1              0.740741           26.314357            9.901749   \n",
-       "2              0.629630            9.426423          116.215997   \n",
-       "3              0.481481           13.841964            8.855953   \n",
-       "4              0.648148          109.277299           34.330039   \n",
-       "\n",
-       "   Время обучения Output Code  \n",
-       "0                   18.841479  \n",
-       "1                   15.091800  \n",
-       "2                  153.165585  \n",
-       "3                   12.621655  \n",
-       "4                   48.059679  "
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                Модель  Точность обучения OVO  Точность обучения OVR  \\\n",
+      "0  Logistic Regression                0.70000                0.67500   \n",
+      "1                  KNN                0.91875                1.00000   \n",
+      "2                  SVM                0.73125                0.68125   \n",
+      "3          Naive Bayes                0.55000                0.56250   \n",
+      "4                  DTC                0.85000                0.83125   \n",
+      "\n",
+      "   Точность обучения Output Code  Точность OVO  Точность OVR  \\\n",
+      "0                        0.63750      0.666667      0.740741   \n",
+      "1                        1.00000      0.777778      0.740741   \n",
+      "2                        0.65000      0.740741      0.648148   \n",
+      "3                        0.44375      0.555556      0.555556   \n",
+      "4                        0.88750      0.722222      0.703704   \n",
+      "\n",
+      "   Точность Output Code  Время обучения OVO  Время обучения OVR  \\\n",
+      "0              0.648148           29.779839           20.702281   \n",
+      "1              0.740741            0.000000            0.000000   \n",
+      "2              0.629630            9.426423          116.215997   \n",
+      "3              0.481481            0.000000            0.000000   \n",
+      "4              0.648148          109.277299           34.330039   \n",
+      "\n",
+      "   Время обучения Output Code  \n",
+      "0                   24.136396  \n",
+      "1                    0.000000  \n",
+      "2                  153.165585  \n",
+      "3                    0.000000  \n",
+      "4                   48.059679  \n"
+     ]
     }
    ],
    "source": [
@@ -1427,7 +1323,7 @@
     "predict = pd.DataFrame(data = models, columns=[\"Модель\", \"Точность обучения OVO\", \"Точность обучения OVR\", \"Точность обучения Output Code\", \n",
     "                                               \"Точность OVO\", \"Точность OVR\", \"Точность Output Code\",  \n",
     "                                               \"Время обучения OVO\", \"Время обучения OVR\", \"Время обучения Output Code\"])\n",
-    "predict"
+    "print(predict)"
    ]
   },
   {
@@ -2120,12 +2016,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col0=df.columns.tolist()"
+    "col0 = df.columns.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 117,
    "id": "62a37d4e",
    "metadata": {},
    "outputs": [
@@ -2139,12 +2035,12 @@
     }
    ],
    "source": [
-    "names=set()\n",
-    "times=set()\n",
+    "names = set()\n",
+    "times = set()\n",
     "for item in col0:\n",
-    "    name=item.split('_')[0]\n",
+    "    name = item.split('_')[0]\n",
     "    names.add(name)\n",
-    "    time_feature=item[len(name) + 1 :]\n",
+    "    time_feature = item[len(name) + 1 :]\n",
     "    times.add(time_feature)\n",
     "print(\"Названия рек: \", names)\n",
     "print(\"Время наблюдений: \", times)"
@@ -2212,7 +2108,7 @@
     }
    ],
    "source": [
-    "colors=[\"red\", \"blue\", \"green\", \"yellow\", \"black\", \"orange\"]\n",
+    "colors = [\"red\", \"blue\", \"green\", \"yellow\", \"black\", \"orange\"]\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.xlabel(\"index\")\n",
@@ -2655,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 118,
    "id": "9439ad94",
    "metadata": {},
    "outputs": [
@@ -2663,9 +2559,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   Model  Train R2   Test R2  Train time\n",
-      "0  Multioutput regressor  0.831881  0.757419   44.623329\n",
-      "1        Regressor chain  0.831909  0.759555   19.748531\n"
+      "                  Модель  Обучение R2  Проверка R2  Время обучения\n",
+      "0  Multioutput regressor     0.831881     0.757419       44.623329\n",
+      "1        Regressor chain     0.831909     0.759555       19.748531\n"
      ]
     }
    ],
@@ -2674,7 +2570,7 @@
     "          (\"Regressor chain\", regr_ch_accuracy_train, regr_ch_accuracy_test, regr_ch_train_time_diff)\n",
     "         ]\n",
     "\n",
-    "predict = pd.DataFrame(data=models, columns=[\"Model\", \"Train R2\", \"Test R2\", \"Train time\"])\n",
+    "predict = pd.DataFrame(data=models, columns=[\"Модель\", \"Обучение R2\", \"Проверка R2\", \"Время обучения\"])\n",
     "print(predict)"
    ]
   },
